5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1723_2498.log
== TEST (2019-05-08 19:54:51) 
-- CODE:
N1 = int(input("cidade A:"))
N2 = int(input("cidade B:"))
C1 = float(input("crescimento A:"))
C2 = float(input("crescimento B:"))

dia = 0

while(N2 > N1):
	N1 = N1 * C1
	N2 = N2 * C2
	print(N1)
	print(N2)
	print(dia)
	dia= dia + 1
	
print(dia)
-- OUTPUT:
8880325.0
6090000.0
0
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:56:11) 
-- CODE:
N1 = int(input("cidade A:"))
N2 = int(input("cidade B:"))
C1 = float(input("crescimento A:"))
C2 = float(input("crescimento B:"))

dia = 0

while(N2 > N1):
	N1 = (N1 % C1)/100
	N2 = (N2 % C2)/100
	print(N1)
	print(N2)
	print(dia)
	dia= dia + 1
	
print(dia)
-- OUTPUT:
0.17
0.01
0
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:57:12) 
-- CODE:
N1 = int(input("cidade A:"))
N2 = int(input("cidade B:"))
C1 = float(input("crescimento A:"))
C2 = float(input("crescimento B:"))

dia = 0

while(N2 > N1):
	N1 = (N1 * C1)/100
	N2 = (N2 * C2)/100
	print(N1)
	print(N2)
	print(dia)
	dia= dia + 1
	
print(dia)
-- OUTPUT:
88803.25
60900.0
0
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:57:58) 
-- CODE:
N1 = int(input("cidade A:"))
N2 = int(input("cidade B:"))
C1 = float(input("crescimento A:"))
C2 = float(input("crescimento B:"))

dia = 0

while(N2 > N1):
	N1 = (N1 * C1)/100
	N2 = (N2 * C2)/100
	print(N1)
	print(N2)
	print(dia)
	dia= dia + 1
	
print(dia)
-- EXECUTION TIME:
0.20691
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
88803.25
60900.0
0
1
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
18475.625
68400.0
0
1893.7515625
3898.8
1
194.10953515625002
222.23160000000004
2
19.896227353515627
12.667201200000001
3
4
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
127500.0
52800.0
0
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 20:04:02) 
-- CODE:
A = int(input("cidade A:"))
B = int(input("cidade B:"))
A1 = float(input("crescimento A:"))
B1 = float(input("crescimento B:"))

dia = 0

while(B > A):
	A = (A1 % A)/100
	B = (B1 % B)/100
	print(A)
	print(B)
	print(dia)
	dia= dia + 1
	
print(dia)
-- OUTPUT:
0.355
0.105
0
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 20:04:57) 
-- CODE:
A = int(input("cidade A:"))
B = int(input("cidade B:"))
A1 = float(input("crescimento A:"))
B1 = float(input("crescimento B:"))

dia = 0

while(B > A):
	A = (A1 % A)*100
	B = (B1 % B)*100
	print(A)
	print(B)
	print(dia)
	dia= dia + 1
	
print(dia)
-- OUTPUT:
3550.0
1050.0
0
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 20:05:48) 
-- CODE:
A = int(input("cidade A:"))
B = int(input("cidade B:"))
A1 = float(input("crescimento A:"))
B1 = float(input("crescimento B:"))

dia = 0

while(B > A):
	A = (A % A1)*100
	B = (B % B1)*100
	print(A)
	print(B)
	print(dia)
	dia= dia + 1
	
print(dia)
-- OUTPUT:
1700.0
100.0
0
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 20:09:17) 
-- CODE:
A = int(input("cidade A:"))
B = int(input("cidade B:"))
A1 = float(input("crescimento A:"))
B1 = float(input("crescimento B:"))

dia = 0

while(B > A):
	A = (A * 365 % A1)/100
	B = (B * 365 % B2)/100
	print(A)
	print(B)
	print(dia)
	dia= dia + 1
	
print(dia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    B = (B * 365 % B2)/100
NameError: name 'B2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 20:09:39) 
-- CODE:
A = int(input("cidade A:"))
B = int(input("cidade B:"))
A1 = float(input("crescimento A:"))
B1 = float(input("crescimento B:"))

dia = 0

while(B > A):
	A = (A * 365 % A1)/100
	B = (B * 365 % B1)/100
	print(A)
	print(B)
	print(dia)
	dia= dia + 1
	
print(dia)
-- OUTPUT:
0.28
0.08
0
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 20:13:29) 
-- CODE:
A = int(input("cidade A:"))
B = int(input("cidade B:"))
A1 = float(input("crescimento A:"))
B1 = float(input("crescimento B:"))

ano = 0

while(B > A):
	A = A * A1 - B
	B = B * B1
	print(A)
	print(B)
	print(dia)
	ano = ano + 1
	
print(dia)




#H = H – V
#V = 2 * V
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(dia)
NameError: name 'dia' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 20:13:56) 
-- CODE:
A = int(input("cidade A:"))
B = int(input("cidade B:"))
A1 = float(input("crescimento A:"))
B1 = float(input("crescimento B:"))

ano = 0

while(B > A):
	A = A * A1 - B
	B = B * B1
	print(A)
	print(B)
	print(ano)
	ano = ano + 1
	
print(dia)




#H = H – V
#V = 2 * V
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(dia)
NameError: name 'dia' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 20:14:06) 
-- CODE:
A = int(input("cidade A:"))
B = int(input("cidade B:"))
A1 = float(input("crescimento A:"))
B1 = float(input("crescimento B:"))

ano = 0

while(B > A):
	A = A * A1 - B
	B = B * B1
	print(A)
	print(B)
	print(ano)
	ano = ano + 1
	
print(dia)




#H = H – V
#V = 2 * V
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(dia)
NameError: name 'dia' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:00:55) 
-- CODE:
A = int(input("cidade A:"))
B = int(input("cidade B:"))
A1 = float(input("crescimento A:"))
B1 = float(input("crescimento B:"))

ano = 0

while(B > A):
	A = A * A1/100
	B = B * B1/100
	print(A)
	print(B)
	print(ano)
	ano = ano + 1
	
print(dia)




#H = H – V
#V = 2 * V
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(dia)
NameError: name 'dia' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:01:03) 
-- CODE:
A = int(input("cidade A:"))
B = int(input("cidade B:"))
A1 = float(input("crescimento A:"))
B1 = float(input("crescimento B:"))

ano = 0

while(B > A):
	A = A * A1/100
	B = B * B1/100
	print(A)
	print(B)
	print(ano)
	ano = ano + 1
	
print(dia)




#H = H – V
#V = 2 * V
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(dia)
NameError: name 'dia' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:01:30) 
-- CODE:
A = int(input("cidade A:"))
B = int(input("cidade B:"))
A1 = float(input("crescimento A:"))
B1 = float(input("crescimento B:"))

ano = 0

while(B > A):
	A = A * A1/100
	B = B * B1/100
	print(A)
	print(B)
	print(ano)
	ano = ano + 1
	
print(ano)




#H = H – V
#V = 2 * V
-- OUTPUT:
88803.25
60900.0
0
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:11:36) 
-- CODE:
A = int(input("cidade A:"))
B = int(input("cidade B:"))
A1 = float(input("crescimento A:"))
B1 = float(input("crescimento B:"))

ano = 0

while(B > A):
	A = A * A1
	A = A/100
	B = B * B1
	B = B/100	
	print(A)
	print(B)
	print(ano)
	ano = ano + 1
	
print(ano)




#H = H – V
#V = 2 * V
-- OUTPUT:
88803.25
60900.0
0
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:14:41) 
-- CODE:
A = int(input("cidade A:"))
B = int(input("cidade B:"))
A1 = float(input("crescimento A:"))
B1 = float(input("crescimento B:"))


J1 = A1/100
J2 = B1/100
ano = 0

while(B > A):
	A = A * J1
	A = A/100
	B = B * J2
	B = B/100	
	print(A)
	print(B)
	print(ano)
	ano = ano + 1
	
print(ano)




#H = H – V
#V = 2 * V
-- OUTPUT:
888.0325
609.0
0
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:26:36) 
-- CODE:
A = int(input("cidade A:"))
B = int(input("cidade B:"))
A1 = float(input("crescimento A:"))
B1 = float(input("crescimento B:"))

J1 = A1/100
J2 = B1/100
ano = 0

while(B > A):
	A = A + (A * J1) 
	B = B + (B * J2)
	ano = ano + 1

	
print(ano)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:26:59) 
-- CODE:
A = int(input("cidade A:"))
B = int(input("cidade B:"))
A1 = float(input("crescimento A:"))
B1 = float(input("crescimento B:"))

J1 = A1/100
J2 = B1/100
ano = 0

while(B > A):
	A = A + (A * J1) 
	B = B + (B * J2)
	ano = ano + 1

	
print(ano)
-- EXECUTION TIME:
0.144631
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
